@@ -169,12 +169,6 @@ sense_type: 3
 // 1 = Athena style (multiple consecutive attacks)
 finger_offensive_type: 0
 
-// Number of hits at a time that undead/fire elemental enemies receive from firewall.
-// NOTE: Officially, it is one hit at a time on a very fast rate, however eA's timer system 
-// doesn't triggers enough "hits" to exhaust the firewall before the mob walks through it.
-// A value of 5 would suffice for a vertical firewall to take full effect on undead.
-firewall_hits_on_undead: 5
-
 // Grandcross Settings (Dont mess with these)
 // If set to no, hit interval is increased based on the amount of mobs standing on the same cell
 // (means that when there's stacked mobs in the same cell, they won't receive all hits)
